// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "inherit", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: currentColor;
  text-align: center;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: inherit;
}"
`;

exports[`getComponentCss() should return correct css for size: "large", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: currentColor;
  text-align: center;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: clamp(1.44rem, .3vw + 1.38rem, 1.71rem);
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: currentColor;
  text-align: center;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
}"
`;

exports[`getComponentCss() should return correct css for size: "small", align: center, color: inherit, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: currentColor;
  text-align: center;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 1rem;
}"
`;

exports[`getComponentCss() should return correct css for size: "x-large", align: left, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-align: left;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: clamp(1.73rem, .57vw + 1.61rem, 2.24rem);
}"
`;

exports[`getComponentCss() should return correct css for size: "xx-large", align: left, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-align: left;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: clamp(2.07rem, .96vw + 1.88rem, 2.94rem);
}"
`;

exports[`getComponentCss() should return correct css for size: "xxx-large", align: left, color: primary, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-align: left;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: clamp(2.49rem, 1.51vw + 2.19rem, 3.84rem);
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"medium","s":"large","m":"x-large","l":"xx-large","xl":"large"}, align: right, color: inherit, ellipsis: false and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(h1), ::slotted(h2), ::slotted(h3), ::slotted(h4), ::slotted(h5), ::slotted(h6) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: inherit !important;
  font-variant: inherit !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
  letter-spacing: inherit !important;
}
.root {
  margin: 0;
  padding: 0;
  font: normal normal 600 clamp(2.07rem, .96vw + 1.88rem, 2.94rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: currentColor;
  text-align: right;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: 1rem;
}
@media(min-width:480px) {
  .root {
    font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  }
}

@media(min-width:760px) {
  .root {
    font-size: clamp(1.44rem, .3vw + 1.38rem, 1.71rem);
  }
}

@media(min-width:1000px) {
  .root {
    font-size: clamp(1.73rem, .57vw + 1.61rem, 2.24rem);
  }
}

@media(min-width:1300px) {
  .root {
    font-size: clamp(2.07rem, .96vw + 1.88rem, 2.94rem);
  }
}

@media(min-width:1760px) {
  .root {
    font-size: clamp(1.44rem, .3vw + 1.38rem, 1.71rem);
  }
}
"
`;
